--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.004688 seconds (2.17 k allocations: 108.156 KiB, 84.99% compilation time)\n"
+      "  0.004139 seconds (2.17 k allocations: 108.156 KiB, 90.99% compilation time)\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "26b1e2bf",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
+   "id": "c341e944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6371.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "DSM1D.my1DDSMmodel.averagedPlanetRadiusInKilometer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "299be0a5",
    "metadata": {},
    "outputs": [
@@ -104,14 +124,14 @@
    "source": [
     "# Example 1-D model (toy). Replace with your actual model arrays.\n",
     "# r_model in meters from Earth center (0..R_ref), assume sorted ascending\n",
-    "R_ref = 6371e3                     # model reference radius (m)\n",
+    "R_ref = DSM1D.my1DDSMmodel.averagedPlanetRadiusInKilometer*1.e3                   # model reference radius (m)\n",
     "r_model = collect(0.0:1000.0:R_ref)  # example radius grid\n",
     "v_model = 5000 .- 0.5 .* (R_ref .- r_model) ./ 1000  # dummy profile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a30a73c7",
    "metadata": {},
    "outputs": [
@@ -152,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "7195ef07",
    "metadata": {},
    "outputs": [
@@ -167,6 +187,7 @@
     }
    ],
    "source": [
+    "import Base: +,-,/\n",
     "struct GeoPoint\n",
     "    lat::Float64 # in degree\n",
     "    lon::Float64 # in degree\n",
@@ -175,109 +196,320 @@
     "    radius::Float64 # in metre\n",
     "end\n",
     "\n",
-    "function GeoPoint(lat, lon; alt=0.0)\n",
-    "    lla = LLA(deg2rad(lat), deg2rad(lon), alt)\n",
-    "    ecef_coords = ECEF(lla,wgs84)\n",
+    "function GeoPoint(lat, lon; alt=0.0, ell=wgs84)\n",
+    "    lla = LLA(lat,lon, alt) # be careful LLA uses degrees by default!!\n",
+    "    ecef_coords = ECEF(lla,ell)\n",
     "    radius = norm([ecef_coords.x,ecef_coords.y,ecef_coords.z])\n",
     "    GeoPoint(lat, lon, alt, SVector(ecef_coords.x, ecef_coords.y, ecef_coords.z),radius)\n",
     "end\n",
     "\n",
     "\n",
+    "function GeoPoint(ecef::SVector{3,Float64}; ell=wgs84)\n",
+    "    lla = LLA(ECEF(ecef...),ell)\n",
+    "    radius = norm(ecef)\n",
+    "    GeoPoint(lla.lat,lla.lon,lla.alt,ecef,radius)\n",
+    "end\n",
     "\n",
-    "function topographyFromGeoPoint(p::GeoPoint; dlon=0.01, dlat=0.01)\n",
+    "function +(a::GeoPoint,b::GeoPoint; ell=wgs84)\n",
+    "    ecef=a.ecef + b.ecef\n",
+    "    lla = LLA(ECEF(ecef...),ell)\n",
+    "    radius = norm(ecef)\n",
+    "    GeoPoint(lla.lat,lla.lon,lla.alt,ecef,radius)\n",
+    "end\n",
+    "\n",
+    "function -(a::GeoPoint,b::GeoPoint; ell=wgs84)\n",
+    "    ecef=a.ecef - b.ecef\n",
+    "    lla = LLA(ECEF(ecef...),ell)\n",
+    "    radius = norm(ecef)\n",
+    "    GeoPoint(lla.lat,lla.lon,lla.alt,ecef,radius)\n",
+    "end\n",
+    "\n",
+    "function /(a::GeoPoint,c::Real; ell=wgs84)\n",
+    "    ecef=a.ecef / c\n",
+    "    lla = LLA(ECEF(ecef...),ell)\n",
+    "    radius = norm(ecef)\n",
+    "    GeoPoint(lla.lat,lla.lon,lla.alt,ecef,radius)\n",
+    "end\n",
+    "\n",
+    "\n",
+    "function topographyFromGeoPoint(p::GeoPoint; dlon=0.01, dlat=0.01, precision=\"@earth_relief_01m\")\n",
     "    region = [p.lon - dlon, p.lon + dlon, p.lat - dlat, p.lat + dlat]\n",
-    "    topo = GMT.grdcut(\"@earth_relief_01m\", region=region)\n",
+    "    topo = GMT.grdcut(precision, region=region)\n",
     "    return GMT.grd2xyz(topo).z[1]  # or mean(topo.z) if you prefer\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "9292b208",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch: No precise constructor for ECEF found. Length of input was 4.",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch: No precise constructor for ECEF found. Length of input was 4.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] _no_precise_size(SA::Type, x::Tuple{Float64, Float64, Float64, WGS84{Nothing}})\n",
-      "   @ StaticArrays ~/.julia/packages/StaticArrays/DsPgf/src/convert.jl:169\n",
-      " [2] _no_precise_size(SA::Type, x::StaticArrays.Args{Tuple{Float64, Float64, Float64, WGS84{Nothing}}})\n",
-      "   @ StaticArrays ~/.julia/packages/StaticArrays/DsPgf/src/convert.jl:168\n",
-      " [3] length_match_size(::Type{ECEF}, x::StaticArrays.Args{Tuple{Float64, Float64, Float64, WGS84{Nothing}}})\n",
-      "   @ StaticArrays ~/.julia/packages/StaticArrays/DsPgf/src/convert.jl:138\n",
-      " [4] construct_type(::Type{ECEF}, x::StaticArrays.Args{Tuple{Float64, Float64, Float64, WGS84{Nothing}}})\n",
-      "   @ StaticArrays ~/.julia/packages/StaticArrays/DsPgf/src/FieldArray.jl:6\n",
-      " [5] ECEF(::Float64, ::Vararg{Any})\n",
-      "   @ StaticArrays ~/.julia/packages/StaticArrays/DsPgf/src/convert.jl:173\n",
-      " [6] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:2"
-     ]
-    }
-   ],
-   "source": [
-    "p1 = GeoPoint(48.8566,2.3522) # Paris\n",
-    "LLAfromECEF(ECEF(collect(p1.ecef)...,wgs84))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "id": "4bedf956",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "grdblend [NOTICE]: Remote data courtesy of GMT data server oceania [http://oceania.generic-mapping-tools.org]\n",
-      "\n",
-      "grdblend [NOTICE]: SRTM15 Earth Relief v2.7 at 01x01 arc minutes reduced by Gaussian Cartesian filtering (5.2 km fullwidth) [Tozer et al., 2019].\n",
-      "grdblend [NOTICE]:   -> Download 30x30 degree grid tile (earth_relief_01m_g): N30E000\n"
+      "GeoPoint(p1.ecef) = GeoPoint(48.8566, 2.3522000000000003, 7.047140324999535e-10, [4.200914795649138e6, 172559.77631070156, 4.780081341967356e6], 6.366053693814456e6)\n",
+      "p0 = (p1 + p2) / 2.0 = GeoPoint(45.82989800475024, 1.9029714540760907, -8978.352692728113, [4.443193158578102e6, 147626.58304377226, 4.545653677986095e6], 6.358201507709939e6)\n"
      ]
     },
     {
-     "ename": "ErrorException",
-     "evalue": "type GMTdataset has no field z",
-     "output_type": "error",
-     "traceback": [
-      "type GMTdataset has no field z\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] getproperty\n",
-      "   @ ./Base.jl:49 [inlined]\n",
-      " [2] topographyFromGeoPoint(p::GeoPoint; dlon::Float64, dlat::Float64)\n",
-      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X15sZmlsZQ==.jl:21\n",
-      " [3] topographyFromGeoPoint(p::GeoPoint)\n",
-      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X15sZmlsZQ==.jl:18\n",
-      " [4] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X11sZmlsZQ==.jl:3"
-     ]
+     "data": {
+      "text/plain": [
+       "GeoPoint(45.82989800475024, 1.9029714540760907, 0.0, [4.449445742893379e6, 147834.32725490912, 4.552093619662703e6], 6.367179809730586e6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "p1 = GeoPoint(48.8566,2.3522) # Paris\n",
     "p2 = GeoPoint(42.8,1.5) # Tarascon (à peu près)\n",
-    "topographyFromGeoPoint(p1)"
+    "#topographyFromGeoPoint(p1)\n",
+    "@show GeoPoint(p1.ecef)\n",
+    "@show p0 = (p1 + p2)/2.0\n",
+    "p0_surface = GeoPoint(p0.lat,p0.lon) # this can be the point (0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "adcbda93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       "  0.7166970175507206\n",
+       " -0.07375625720924696\n",
+       " -0.693473431038555"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# pre-definition of x-axis vector p1->p2 (normally this is not the one we want)\n",
+    "p2_1 = p2-p1\n",
+    "x_axis_tentative = (p2_1/p2_1.radius).ecef\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "45025ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       " 0.698812888076966\n",
+       " 0.023218292604404035\n",
+       " 0.7149275895823759"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# definition of z-axis vector p0 -> p0_surface\n",
+    "\n",
+    "z_axis = (p0/p0.radius).ecef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "72039663",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       "  0.036629318622305354\n",
+       "  0.9970002078796852\n",
+       " -0.06818268478968828"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# y-axis: complete right-handed system\n",
+    "y_axis = normalize(cross(z_axis, x_axis_tentative))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b1cb69ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       "  0.7143660409585519\n",
+       " -0.07383424934541309\n",
+       " -0.6958661244440657"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x_axis = cross(y_axis, z_axis)  # now perfectly orthogonal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7feea3e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 SMatrix{3, 3, Float64, 9} with indices SOneTo(3)×SOneTo(3):\n",
+       " 0.714366   -0.0738342  -0.695866\n",
+       " 0.0366293   0.997      -0.0681827\n",
+       " 0.698813    0.0232183   0.714928"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Rotation matrix\n",
+    "R = SMatrix{3,3,Float64}(\n",
+    "    x_axis[1], y_axis[1], z_axis[1],\n",
+    "    x_axis[2], y_axis[2], z_axis[2],\n",
+    "    x_axis[3], y_axis[3], z_axis[3]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "1777feca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p_2D_to_ECEF (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R*SVector(x_2D,0.0,z_2D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "eec1a7f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p_ECEF_to_2D (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p_ECEF_to_2D(p_3D::SVector{3,Float64},pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = R' * (p_3D - pOrigin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "538ed170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       " -8974.55767404395\n",
+       "   105.0093974953916\n",
+       "  -238.9658066118192"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p_ECEF_to_2D(p0.ecef, p0_surface.ecef,R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "083a3ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       "      4.443193158578102e6\n",
+       " 147626.58304377226\n",
+       "      4.545653677986095e6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p0.ecef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "fa555934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       "      4.449445742893379e6\n",
+       " 147834.32725490912\n",
+       "      4.552093619662703e6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p_2D_to_ECEF(0,0,p0_surface.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adcbda93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45025ca4",
+   "id": "6dae34a0",
    "metadata": {},
    "outputs": [],
    "source": []
