--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 83,
    "id": "4bedf956",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "GeoPoint(45.82989800475024, 1.9029714540760907, 0.0, [4.449445742893379e6, 147834.32725490912, 4.552093619662703e6], 6.367179809730586e6)"
+       "GeoPoint(45.82989800475024, 1.9029714540760907, -8978.352692728113, [4.443193158578102e6, 147626.58304377226, 4.545653677986095e6], 6.358201507709939e6)"
       ]
      },
      "metadata": {},
@@ -268,13 +268,12 @@
     "p2 = GeoPoint(42.8,1.5) # Tarascon (à peu près)\n",
     "#topographyFromGeoPoint(p1)\n",
     "@show GeoPoint(p1.ecef)\n",
-    "@show p0 = (p1 + p2)/2.0\n",
-    "p0_surface = GeoPoint(p0.lat,p0.lon) # this can be the point (0,0)"
+    "@show p0 = (p1 + p2)/2.0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "id": "adcbda93",
    "metadata": {},
    "outputs": [
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "id": "45025ca4",
    "metadata": {},
    "outputs": [
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "id": "72039663",
    "metadata": {},
    "outputs": [
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "id": "b1cb69ac",
    "metadata": {},
    "outputs": [
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "id": "7feea3e8",
    "metadata": {},
    "outputs": [
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "id": "1777feca",
    "metadata": {},
    "outputs": [
@@ -414,12 +413,12 @@
     }
    ],
    "source": [
-    "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R*SVector(x_2D,0.0,z_2D)"
+    "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R*SVector(x_2D,0.e0,z_2D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "id": "eec1a7f9",
    "metadata": {},
    "outputs": [
@@ -439,7 +438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
+   "id": "b55f2301",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "id": "538ed170",
    "metadata": {},
    "outputs": [
@@ -447,9 +454,9 @@
      "data": {
       "text/plain": [
        "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       " -8974.55767404395\n",
-       "   105.0093974953916\n",
-       "  -238.9658066118192"
+       "    8341.076143154814\n",
+       "  -48189.85002661229\n",
+       " -334492.0981322616"
       ]
      },
      "metadata": {},
@@ -457,35 +464,12 @@
     }
    ],
    "source": [
-    "p_ECEF_to_2D(p0.ecef, p0_surface.ecef,R)"
+    "p_ECEF_to_2D(p0.ecef, p1.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "083a3ed1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "      4.443193158578102e6\n",
-       " 147626.58304377226\n",
-       "      4.545653677986095e6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "p0.ecef"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "id": "fa555934",
    "metadata": {},
    "outputs": [
@@ -493,9 +477,9 @@
      "data": {
       "text/plain": [
        "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "      4.449445742893379e6\n",
-       " 147834.32725490912\n",
-       "      4.552093619662703e6"
+       "      4.200914099783014e6\n",
+       " 172559.70812801676\n",
+       "      4.780082056894946e6"
       ]
      },
      "metadata": {},
@@ -503,13 +487,36 @@
     }
    ],
    "source": [
-    "p_2D_to_ECEF(0,0,p0_surface.ecef,R)"
+    "p0_1m_above=p_2D_to_ECEF(0,1,p1.ecef,R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "6dae34a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
+       " -2.2947774760174783e-10\n",
+       "  6.235097495158809e-12\n",
+       "  1.0000000001379907"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p_ECEF_to_2D(p0_1m_above, p1.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dae34a0",
+   "id": "e9bb26a9",
    "metadata": {},
    "outputs": [],
    "source": []
