--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "id": "7195ef07",
    "metadata": {},
    "outputs": [
@@ -194,6 +194,7 @@
     "    alt::Float64 # in metre\n",
     "    ecef::SVector{3,Float64}\n",
     "    radius::Float64 # in metre\n",
+    "    #effectiveRadius::Float64 # in metre (useful to get values from 1D averaged model)\n",
     "end\n",
     "\n",
     "function GeoPoint(lat, lon; alt=0.0, ell=wgs84)\n",
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "id": "fa555934",
    "metadata": {},
    "outputs": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "id": "6dae34a0",
    "metadata": {},
    "outputs": [
@@ -515,8 +516,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "e9bb26a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-400000.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Δx = 500 # in metre\n",
+    "Δz = 500\n",
+    "\n",
+    "altMax = 5000 # in metre\n",
+    "altMin = -400.e3 # in metre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "2fc45c28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# since p1 and p2 can be even out of the solid Earth or inside the Earth\n",
+    "# I define that p1 and p2 should be the left and right limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "6254253a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "676097.0312306838"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "leftLimit = 0 # in metre so x is always non-negative\n",
+    "rightLimit = p2_1.radius\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c40352eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nx = Int64((rightLimit - leftLimit) ÷ Δx + 1) = 1353\n",
+      "Nz = Int64((altMax - altMin) ÷ Δz + 1) = 811\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "811"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@show Nx = Int64((rightLimit-leftLimit) ÷ Δx+1) \n",
+    "@show Nz = Int64((altMax-altMin) ÷ Δz + 1 ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "e0173df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allGridsInGeoPoints=Array{GeoPoint,2}(undef,Nx,Nz)\n",
+    "for iXZ in CartesianIndices(allGridsInGeoPoints)\n",
+    "    ix, iz = Tuple(iXZ)\n",
+    "    x = (ix-1)*Δx\n",
+    "    z = (iz-1)*Δz\n",
+    "    \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "284400ed",
    "metadata": {},
    "outputs": [],
    "source": []
