soon it will be ok

--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 118,
    "id": "7195ef07",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
     "    #effectiveRadius::Float64 # in metre (useful to get values from 1D averaged model)\n",
     "end\n",
     "\n",
-    "function GeoPoint(lat, lon; alt=0.0, ell=wgs84)\n",
+    "function GeoPoint(lat::Float64, lon::Float64; alt=0.0, ell=wgs84)\n",
     "    lla = LLA(lat,lon, alt) # be careful LLA uses degrees by default!!\n",
     "    ecef_coords = ECEF(lla,ell)\n",
     "    radius = norm([ecef_coords.x,ecef_coords.y,ecef_coords.z])\n",
@@ -233,11 +233,17 @@
     "end\n",
     "\n",
     "\n",
+    "function effectiveRadius(a::GeoPoint,r0::Float64; ell=wgs84)\n",
+    "    radiusPlanetHere = GeoPoint(a.lat,a.lon).radius \n",
+    "    ratio = r0/radiusPlanetHere\n",
+    "    return a.radius*ratio\n",
+    "end\n",
+    "\n",
     "function topographyFromGeoPoint(p::GeoPoint; dlon=0.01, dlat=0.01, precision=\"@earth_relief_01m\")\n",
     "    region = [p.lon - dlon, p.lon + dlon, p.lat - dlat, p.lat + dlat]\n",
     "    topo = GMT.grdcut(precision, region=region)\n",
     "    return GMT.grd2xyz(topo).z[1]  # or mean(topo.z) if you prefer\n",
-    "end"
+    "end\n"
    ]
   },
   {
@@ -601,24 +607,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "e0173df5",
    "metadata": {},
    "outputs": [],
    "source": [
     "allGridsInGeoPoints=Array{GeoPoint,2}(undef,Nx,Nz)\n",
+    "effectiveRadii=Array{Float64,2}(undef,Nx,Nz)\n",
     "for iXZ in CartesianIndices(allGridsInGeoPoints)\n",
     "    ix, iz = Tuple(iXZ)\n",
-    "    x = (ix-1)*Δx\n",
-    "    z = (iz-1)*Δz\n",
-    "    \n",
+    "    x = leftLimit+(ix-1)*Δx\n",
+    "    z = altMin+(iz-1)*Δz \n",
+    "    tmpGeoPoint=GeoPoint(p_2D_to_ECEF(x,z,p1.ecef,R))\n",
+    "    allGridsInGeoPoints[iXZ]=tmpGeoPoint\n",
+    "    effectiveRadii[iXZ]=effectiveRadius(tmpGeoPoint,DSM1D.my1DDSMmodel.averagedPlanetRadiusInKilometer*1.e3 )\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "284400ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GeoPoint(45.26820230196961, 2.5540239364680706, -18090.050762195096, [4.479279745343279e6, 199801.2968604095, 4.495524046612065e6], 6.349299492773748e6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "allGridsInGeoPoints[3,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "280a4f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.4514247701887805e6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "effectiveRadii[200,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "fa2c6a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.351882957945972e6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "minimum(effectiveRadii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc026d44",
    "metadata": {},
    "outputs": [],
    "source": []
