--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -607,6 +607,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "id": "a3523059",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Matrix{Float64}, ::Vector{Int64})\nThe function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Matrix{Float64}, ::Vector{Int64})\n",
+      "The function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n",
+      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n",
+      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n",
+      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X51sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "DSM1D.compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(DSM1D.my1DDSMmodel.C_ρ,([5330,6330]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "94c2a6fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Vector{Int64})\nThe function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Vector{Int64})\n",
+      "The function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n",
+      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n",
+      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n",
+      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X50sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "DSM1D.compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray([6330,6340])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 125,
    "id": "e0173df5",
    "metadata": {},
@@ -690,7 +752,9 @@
    "id": "cc026d44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# now I need to use "
+   ]
   }
  ],
  "metadata": {
